--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
-  "name": "finance-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.3"
-  }
+    "name": "finance-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "13.4.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "axios": "^1.4.0",
+        "@tanstack/react-query": "^4.29.7",
+        "@mui/icons-material": "latest",
+        "@mui/lab": "latest",
+        "@mui/material": "latest",
+        "@emotion/react": "latest",
+        "@emotion/server": "latest",
+        "@emotion/styled": "latest",
+        "apexcharts": "^3.40.0",
+        "react-apexcharts": "^1.4.0",
+        "clsx": "^1.2.1",
+        "dayjs": "^1.11.7",
+        "react-hook-form": "^7.43.9",
+        "@hookform/resolvers": "^3.1.0",
+        "yup": "^1.1.1"
+    },
+    "devDependencies": {
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.12",
+        "@types/react-dom": "18.2.5",
+        "@typescript-eslint/eslint-plugin": "^5.46.1",
+        "@typescript-eslint/parser": "^5.46.1",
+        "eslint": "8.43.0",
+        "eslint-config-next": "13.4.6",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-import-resolver-typescript": "^3.5.2",
+        "eslint-plugin-promise": "^6.1.1",
+        "prettier": "^2.8.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "typescript": "^4.9.4"
+    }
 }
