--- a/package.json
+++ b/package.json
@@ -9,23 +9,19 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "13.4.6",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "axios": "^1.4.0",
+        "@fontsource/roboto": "^4.5.8",
+        "@hookform/resolvers": "^3.1.0",
         "@tanstack/react-query": "^4.29.7",
-        "@mui/icons-material": "latest",
-        "@mui/lab": "latest",
-        "@mui/material": "latest",
-        "@emotion/react": "latest",
-        "@emotion/server": "latest",
-        "@emotion/styled": "latest",
         "apexcharts": "^3.40.0",
-        "react-apexcharts": "^1.4.0",
+        "axios": "^1.4.0",
         "clsx": "^1.2.1",
         "dayjs": "^1.11.7",
+        "next": "13.4.6",
+        "react": "18.2.0",
+        "react-apexcharts": "^1.4.0",
+        "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
-        "@hookform/resolvers": "^3.1.0",
+        "scss-reset": "^1.4.2",
         "yup": "^1.1.1"
     },
     "devDependencies": {
@@ -36,14 +32,15 @@
         "@typescript-eslint/parser": "^5.46.1",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.6",
-        "eslint-plugin-react": "^7.31.11",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-import-resolver-typescript": "^3.5.2",
-        "eslint-plugin-promise": "^6.1.1",
-        "prettier": "^2.8.1",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.5.2",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^2.8.1",
+        "sass": "^1.63.4",
         "typescript": "^4.9.4"
     }
 }
