--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "@tanstack/react-query": "^4.29.7",
         "apexcharts": "^3.40.0",
         "axios": "^1.4.0",
+        "@emotion/react": "latest",
+        "@emotion/styled": "latest",
+        "@mui/icons-material": "latest",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "dayjs": "^1.11.7",
