--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "latest",
+        "@emotion/styled": "latest",
         "@fontsource/roboto": "^4.5.8",
         "@hookform/resolvers": "^3.1.0",
+        "@mui/icons-material": "latest",
         "@tanstack/react-query": "^4.29.7",
         "apexcharts": "^3.40.0",
         "axios": "^1.4.0",
-        "@emotion/react": "latest",
-        "@emotion/styled": "latest",
-        "@mui/icons-material": "latest",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "dayjs": "^1.11.7",
+        "focus-trap-react": "^10.1.4",
         "next": "13.4.6",
         "react": "18.2.0",
         "react-apexcharts": "^1.4.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
         "scss-reset": "^1.4.2",
+        "styled-components": "^5.3.6",
         "yup": "^1.1.1"
     },
     "devDependencies": {
         "@types/node": "20.3.1",
         "@types/react": "18.2.12",
         "@types/react-dom": "18.2.5",
+        "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.46.1",
         "eslint": "8.43.0",
