--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "clsx": "^1.2.1",
         "dayjs": "^1.11.7",
         "focus-trap-react": "^10.1.4",
+        "moment": "^2.29.4",
         "next": "13.4.6",
         "react": "18.2.0",
         "react-apexcharts": "^1.4.0",
@@ -28,6 +29,7 @@
         "react-hook-form": "^7.43.9",
         "scss-reset": "^1.4.2",
         "styled-components": "^5.3.6",
+        "uuid": "^9.0.0",
         "yup": "^1.1.1"
     },
     "devDependencies": {
@@ -35,6 +37,7 @@
         "@types/react": "18.2.12",
         "@types/react-dom": "18.2.5",
         "@types/styled-components": "^5.1.26",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.46.1",
         "eslint": "8.43.0",
