--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "@hookform/resolvers": "^3.1.0",
         "@mui/icons-material": "latest",
         "@tanstack/react-query": "^4.29.7",
+        "@tanstack/react-query-devtools": "^4.32.6",
         "apexcharts": "^3.40.0",
-        "axios": "^1.4.0",
         "classnames": "^2.3.2",
         "clsx": "^1.2.1",
         "dayjs": "^1.11.7",
